package user;

public interface User {
    int login(String name, String password);
}
