@startuml

left to right direction

package "Service"{
    entity Lesson
    entity PrivateLesson
    entity PublicLesson
    entity Offering
    entity Booking
    entity LessonCatalogue
    entity OfferingCatalogue
    entity BookingCatalogue
}
package "UserManagement"{
    entity User
    entity Instructor
    entity Client
    entity Child
    entity admin
    entity UserCatalogue
}
User *-- UserCatalogue
Client <|-- User
Instructor <|-- User
Client "1" -- "0. .*" Child : has >

(Client, Service.Offering) .. Booking
(Lesson, Instructor) .. Offering

admin -- UserCatalogue : Read-Delete >
admin -- LessonCatalogue : Create-Read-Delete >
admin -- OfferingCatalogue : View >
admin -- BookingCatalogue : View >
admin -- Geography.LocationCatalogue : View >
admin -- Geography.CityCatalogue : View >
admin -- TimeManagement.ScheduleCatalogue : View >

Geography.Location "1" -- "*" Lesson: have <


@enduml